--- a/index.html
+++ b/index.html
@@ -37,9 +37,16 @@
             up and taking action."
           </p>
         </div>
+
         <img
+          srcset="
+            /images/pattern-divider-mobile.svg   500w,
+            /images/pattern-divider-desktop.svg 1460w
+          "
+          sizes="(max-width: 500px) 100vw,
+       100vw"
           src="/images/pattern-divider-desktop.svg"
-          alt="divider"
+          alt="divider pattern"
           class="advice-card__divider"
         />
         <div class="advice-card__dice">
@@ -56,7 +63,7 @@
           })
           .then((data) => {
             const adviceNum = `${data.slip.id}`;
-            const adviceQuote = `${data.slip.advice}`;
+            const adviceQuote = `"${data.slip.advice}"`;
             document.getElementById("advice-num").innerText = adviceNum;
             document.getElementById("advice-quote").innerText = adviceQuote;
           })
